--- a/custom_final_product_position/views/product_final_view.xml
+++ b/custom_final_product_position/views/product_final_view.xml
@@ -3,6 +3,7 @@
   
         <!-- trees -->
 
+
     <record id="view_product_final_tree" model="ir.ui.view">
         <field name="name">Final Product</field>
         <field name="model">product.final</field>
@@ -14,19 +15,20 @@
         </field>
     </record>
 
-    <record id="view_cutting_ubication_tree" model="ir.ui.view">
+    <record id="view_cutting_unication_product_tree" model="ir.ui.view">
         <field name="name">Cutting Ubications Products</field>
-        <field name="model">cutting.ubication</field>
+        <field name="model">cutting.ubication.product</field>
         <field name="arch" type="xml">          
-            <tree> 
-              <field name="product_final_id"/>
-               <!-- <field name="position"/> -->
-               <!-- <field name="name"/>               -->
+            <tree>              
+               <field name="name"/>
+               <field name="position"/>
+               <field name="product"/>              
             </tree>          
         </field>
     </record>
 
         <!-- forms -->
+
 
     <record id="view_product_final_form" model="ir.ui.view">
         <field name="name">Final Product</field>
@@ -43,16 +45,16 @@
         </field>
     </record>
 
-    <record id="view_cutting_ubication_form" model="ir.ui.view">
+    <record id="view_cutting_ubication_product_form" model="ir.ui.view">
         <field name="name">Cutting Ubication Product</field>
-        <field name="model">cutting.ubication</field>
+        <field name="model">cutting.ubication.product</field>
         <field name="arch" type="xml">         
           <form>
             <sheet>
               <group>
-               <field name="product_final_id"/>
-               <!-- <field name="position"/>
-               <field name="name"/> -->
+               <field name="name"/>
+               <field name="position"/>
+               <field name="product"/>
               </group>
             </sheet>
           </form>          
@@ -65,15 +67,15 @@
     <record model="ir.ui.view" id="cutting_ubication_form_page_view">
       <field name="name">Cutting Ubications</field>
       <field name="model">product.template</field>
-      <field name="inherit_id" ref="product.product_template_form_view"/>      
+      <field name="inherit_id" ref="product.product_template_form_view"/>
       <field name="arch" type="xml">        
           <page name="general_information" position="after">
             <page name="cutting_ubication_form_page"
-                  string="Cutting Ubications">                
-                  <group>                   
-                    <field name="cutting_ubication_ids"/>
+                  string="Cutting Ubications">
+                  <group>
+                    <field name="product_final_ids"/>
                     <field name="position"/>                    
-                  </group>              
+                  </group>
             </page>
           </page>        
       </field>
@@ -87,9 +89,9 @@
       <field name="view_mode">tree,form</field>
     </record>  
 
-    <record model="ir.actions.act_window" id="cutting_ubication_action_window">
+    <record model="ir.actions.act_window" id="cutting_ubication_product_action_window">
       <field name="name">Cutting Ubication Product</field>
-      <field name="res_model">cutting.ubication</field>
+      <field name="res_model">cutting.ubication.product</field>
       <field name="view_mode">tree,form</field>
     </record>  
 
@@ -100,9 +102,9 @@
         parent="stock.menu_product_in_config_stock"       
         action="product_final_action_window"/>
 
-    <menuitem id="cutting_ubication_menu" name="Cutting Ubication Products"
+    <menuitem id="cutting_ubication_product_menu" name="Cutting Ubication Products"
         parent="sale.product_menu_catalog"       
-        action="cutting_ubication_action_window"/>
+        action="cutting_ubication_product_action_window"/>
 
 
 </odoo>
